--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
         "dev": "vite",
         "start": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
         "test": "vitest",
         "test:ui": "vitest --ui",
         "coverage": "vitest run --coverage"
