--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
         "@vitejs/plugin-react": "^4.0.0",
+        "happy-dom": "^20.0.10",
         "jsdom": "^27.2.0",
         "vite": "^5.0.0",
         "vitest": "^4.0.8"
