--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,11 @@
         "test": "vitest",
         "test:ui": "vitest --ui",
         "coverage": "vitest run --coverage"
-      },
-      
-      
-      
+    },
     "dependencies": {
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.30.2"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.9.1",
